external-crates/move/crates/move-compiler/tests/move_check/parser/constants_standalone_let.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/constants_standalone_let.move:4:21
  │
4 │     const C1: u64 = let x = 0;
  │                     ^^^
  │                     │
  │                     Unexpected 'let'
  │                     Expected an expression term
